; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/tegra/extr_pinctrl-tegra.c_pmx_readl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/tegra/extr_pinctrl-tegra.c_pmx_readl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_pmx = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tegra_pmx*, i64, i64)* @pmx_readl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pmx_readl(%struct.tegra_pmx* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.tegra_pmx*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.tegra_pmx* %0, %struct.tegra_pmx** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.tegra_pmx*, %struct.tegra_pmx** %4, align 8
  %8 = getelementptr inbounds %struct.tegra_pmx, %struct.tegra_pmx* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = getelementptr inbounds i64, i64* %9, i64 %10
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %6, align 8
  %14 = add i64 %12, %13
  %15 = call i64 @readl(i64 %14)
  ret i64 %15
}

declare dso_local i64 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
